@@ -4,24 +4,20 @@ Hash: SHA256
 AUX imagemagick-6.7.8.7-freetype.patch 1114 SHA256 fcdb9382eddab0ae73f115178296933b1c8705719b2c3c43ce8274441a4387e7 SHA512 86372988ab4ee7be8573d50f7dd5022f031cfdf1e3e6e478c99d155e9cbc251a0db7496c141931e2b08d3e5142169ef56b544b70449dc41cf3376ddaf99e8ec1 WHIRLPOOL 9eb6105540e49b35e13e4ae7863a8fb20bd7bd292c93bc29c4e9c6914b0fb92496b736276a5c7f926a2a1b755547b2ced6471e929d0ce95ff3a6aa81c91aba62
 DIST ImageMagick-6.7.8-7.tar.xz 7830744 SHA256 593e09bec0e6def3f9d6d6b0f7970ddd37dd9420a1286ce27e3f4ba26b78f114 SHA512 76b30887a40e6c74006a0e17f848893901bf001d68b4bf4ab6f38bf3147bf8b1fffa7e0a3aca8acb46bd65c6489aee6f9c28606f43d46b00cf9be2b6a93290dc WHIRLPOOL 2b746348aa058e4c2ef1096c62254f7694d7cc32bb23ee36f8a6b9f8fbb4603a98c2d473d0656004d40923b124c9d882842fec700fbac4900eaba1a5a102164a
 DIST ImageMagick-6.7.9-9.tar.xz 8363720 SHA256 706164aa20219f2f72bed9f8f2d1a998897fed61cd95cd4939be4e8fa7e1904a SHA512 41070032e7deddba17a779a985d600526c0eb32a5518db5d11aa722a65998743344105825155606dc2aab8af45ffa585f2c34e55f492662998773c1d84f880f9 WHIRLPOOL 09428d51460276d558e0c7c2bcd50b765865b59a2b243bae6f82b363c469599c2fb190d41a55d990b0474e2d9417acfb24506e3802a528ec84ab43d9283b5705
+DIST ImageMagick-6.8.4-9.tar.xz 8190612 SHA256 1120ded81d4f0725d4d8ddcc9c793da34d4c1c6abe5914b67a79a6e201f01bea SHA512 25c9261c18a5581a616ea43bcaff13cd84ebcb0cd4d4ace5a14862fdd53580c04c8df299b21f3035b0aeffd784f26befb312245c082e854aac4be66593ed093d WHIRLPOOL d18863924bba454b55537ba721b540dff69b897a8814233f1cd8b99534abeff96c55c5be5c29e61222fb7b7a75bf251280fcc57777011c28acf7fe90d1773c23
 EBUILD imagemagick-6.7.8.7.ebuild 4259 SHA256 2977d296b1e5017f891c97c8863cc869c8255de7e428c21d68808e1f3e767adf SHA512 f7114d939a7c6e4256928bb61db99a6b256c44bf4285a1342e22e29706fee15b1d682a3b7e425bc030f5fd062a9eaede21eb787a48d1228831fdfdb1fbd9fae7 WHIRLPOOL 7e76a8f519f9e7f92dd4f11ae20d2311fd4276716f957cf0ce4f84fb9c0e6d55caa6f839140e307c796536853b5a9a6875868ab8e6b1d2ec15fbcfb40998f24a
 EBUILD imagemagick-6.7.9.9.ebuild 4410 SHA256 f16487233cd935b18bc34427ee80548a3d7d2e41afb4d71f26eee3e99bf52c84 SHA512 3284236a5a681e677f5e6bc72e97134e0140e29eb0faa8e101c74540831dc4ff81aeacc1875b3ecdde8a67d78702fba30e45c542ed0b9db6b81f1b5393adf6da WHIRLPOOL 80170e5d28f52ac6b79b3b8bd1baba083e82af0384c03b292780e52cffd7faf936409a1d8f25880d55eee6cbff49ed090c4e7a1c037f1917ddb75a716f0582cd
-MISC ChangeLog 73914 SHA256 37bda65e556271c3c1a25424850ebfb284e346f67f8800f2d40e2d44f3e7db24 SHA512 9ca8369d058e8fad5085713586324183083a4ea99f8de81e1966c3a9fa3f41d59f77261a847f9d30db792926484135339e9b3caefbc70aeee43be728ffa04e8b WHIRLPOOL cbdbee0bedf6c53585c6252b75f8e4977b320222c48e2d85f54ff427019577a52a3aa89f3360c01233c02844814080cf91d15f6814a4d3e9e495e66cdeb10e31
+EBUILD imagemagick-6.8.4.9.ebuild 4281 SHA256 5b1469fc0655ab2ef5a21fca01aa03a8b7691436a05e38af67d6bbdd7330b21c SHA512 484ffac54381682716b0721055aa4bbe65b0383b261468d89c74e97cf4f14519ec42bd0880e84f0957db8fed741b1c7cf34cf9079b07c8288f5fec634575aade WHIRLPOOL fe2f9e70dea16c0b44b48592455a91c20ca490d1a80bb38bc85dcf190c3f85cc68b32a642096be54e913c2d52a64ecbdecdf71bdfbb6e3d94967079a33978762
+MISC ChangeLog 74052 SHA256 7fcdfc76a58cecbcfdf1ca973dd33b96306d65351aacff3ab1dbe20e234e8fe5 SHA512 d26ffd402609daf4818e4c44db2c56a0ea3868f49ff7e51af9075f1d7b691057fccd0ff600258efb80995b82d56b59e8ca8e6b2a5140db596e640e2af6ca6f9f WHIRLPOOL de150a0052c7c4419f5037fefad65f935e0121c14844bffb48d3e8361bd388c33b2588e0f7daced4acda11a1e6dd7598e7c4635daf4864d2c14c38c15a72b80e
 MISC metadata.xml 1050 SHA256 c7fad295a9ca9207454a88d9794902dd76f732f01a439d29f94372ce9ae4af7d SHA512 d502e1038cd08123b1a0d25dccee6a4134bd8fc768c228042b546c8ee226432430107f76b506e946eb5a9b358c13115e5c6e7a1c80f3fe5b4061885263b0dbd7 WHIRLPOOL 675922fbabfacc2660f9572b61a3cee8bb0967b0df0e6e211271399dcb6edc050246344e5251e6a4a4411f8671f3c625d07f3606531662ab5b278fdcff692010
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRC9S+AAoJEOSiRoyO7jvouFEP/2D2duS+9WaccyKkQ40lHTCk
-uKOxyLQz7teWIyHtmvQcTA30d/IUzZafZwzjJs+m5SQuhWbk289z4iiy+y2+xv6A
-nIOGMe8inXejemVNlMbxmxBoT2KgunMzGJpfWF69zoD435Jc7xG1Fk35ZssXFfkQ
-KlxQuaGItb2XrnxS8hAbQTrYG247CTonpPwVMBJR88d7aMR86eo7JsTAxai0U9wp
-g6L910EtwoAuKKneoHYeeJu5WLe81e9J2hqLY/OnwQoHxAUjsaZlhoZvp8Fl75Dv
-NM8zqgrzHPyNxHQ/gCJCkwjF3iR2x4AlHc71HfPHyp+TSzZr5jqlSlpba3VO+Oaz
-O3V6f/1SZximcKfqA8uL4pmjxMFzyjMlGOYvmtjppGTFWXmwENphHYl2A5HJ5Db9
-9WhYbg8/u30E9QN1mqvrXZSjzGZe+vTUmNdYyiVehi+uDQio/8KqTtoIrlyNrHbs
-fybrkDxJO4SkYGKIXH1XDFRoWmWm12QznUB88M+o2L5H+ngXk7bnkQV+hYQ8UC0V
-HSbh4LZnXePhNwuCFjOoX7+hS8YoHvGLwmZ2dCkn84YMK6fwx6Qu43fNookycCT8
-+OXW0DzWjjZGvcLInFInWRKmDAWEKgCMQdeoD4r2w99PniBanzc3DhYif+UPQ+eq
-dDDiJ0yagVw/HBnIBJaC
-=4sXx
+iQEcBAEBCAAGBQJRarzXAAoJEEdUh39IaPFNLaUH/idrX2hXZIYRr+z6eJ6tuVLq
+THy4gQ0Ff1qMgNPeVHkMfjkrha8rPlLR+JMyUrxNHZfBkRDDHmxyyS8ESzhnt/lF
+PT9ajebhjYvZ9McHh967Zg7/wmYHgtgP5AK+IOER4wnb+R/wQvIKLB3afL5eveMI
+f9h5XtZoaG5ubiri17pgNSwQZlaS81MMG7zrsBZuD20L/JEdc7gLi56O7BN5Euiw
+qIhGaMlpIjMpKzBibG0nDOua0fN2ag0KPmHQAgYBfAudXD5HS5eNJ7p2jQUB+EZK
+F+5VGkgCKpkSU4N3772uFHxz1JgRXstu4dBbScat8W6x0cQd3Kt4EAHuqKZY3j4=
+=8zqJ
 -----END PGP SIGNATURE-----
