@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/imagemagick
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.499 2013/02/01 14:44:53 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.500 2013/04/14 14:28:00 ssuominen Exp $
+
+*imagemagick-6.8.4.9 (14 Apr 2013)
+
+  14 Apr 2013; Samuli Suominen <ssuominen@gentoo.org>
+  +imagemagick-6.8.4.9.ebuild:
+  Version bump.
 
   01 Feb 2013; Tomáš Chvátal <scarabeus@gentoo.org> imagemagick-6.7.8.7.ebuild,
   imagemagick-6.7.9.9.ebuild:
